@@ -36,6 +36,8 @@ Version 1.8.3
        with urls. (Stefan)
 - BUG: Issue #576: TortoiseMerge: Double-click word
        should highlight whole word only. (Sup Yut Sum)
+- BUG: Issue #577: TortoiseMerge: LocationBar highlights
+       should respect all options in FindDlg. (Sup Yut Sum)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
